# Inteligencias-Artificiais-Generativas-com-Python

./: README.md  test.ipynb  testTorch.ipynb
aulas/: Aula00.ipynb
aulas/1.introducao/: Aula00.ipynb
aulas/2.introducaoRNA/: 1.RNAKeras.ipynb
aulas/2.introducaoRNA/.ipynb_checkpoints/: 1.RNAKeras-checkpoint.ipynb
aulas/3.GANS/: 1_DCGAN.ipynb  2_PGAN.ipynb  3_MNISTGAN.ipynb  4.1.FASHIONGAN_MODEL.ipynb  4_FASHIONGAN.ipynb  fashion_generator.pth
aulas/3.GANS/.ipynb_checkpoints/: 4.1.FASHIONGAN_MODEL-checkpoint.ipynb
aulas/4.VAE/: 1_VA.ipynb
aulas/5.Transformers/: 1_Texto.ipynb  2_Finetune.ipynb
aulas/6.Difusion/: 1_AutoPipeline.ipynb  2_Stablediffusion.ipynb  3_Videos.ipynb  4_Audios.ipynb  5_Outros.ipynb  videos.py
aulas/projeto-ml/: app.py  pyproject.toml  testes.ipynb
machine-learning/: classificacao-knn.ipynb  classificacao-svm.ipynb  introducao-sklearn.ipynb
