[tool.poetry]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = ["John <andreygdsn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
streamlit = "^1.38.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
